@@ -6,6 +6,7 @@ Version 1.1.9 (released ??-???-????)
   * fix Subversion 1.4.x revision log compatibility code regression
   * display sanitized error when authzfile is malformed
   * internally treat file:/// Subversion rootpaths as local repositories
+  * restore markup of URLs in file contents (issue #455)
 
 Version 1.1.8 (released 02-Dec-2010)
 
